<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16sp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp"
            android:layout_margin="15sp">

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/Task11String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp">
                <TextView
                    android:text="@string/Task12String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp">
                <TextView
                    android:text="@string/Task13String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp">
                <TextView
                    android:text="@string/Task14String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/TV4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="15sp">
                    <Button
                        android:id="@+id/BTN41"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startString"/>
                    <Button
                        android:id="@+id/BTN42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stopString"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp">
                <TextView
                    android:text="@string/task15String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task22String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task23String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task32String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task31String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task33String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15sp" >
                <TextView
                    android:text="@string/task34String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/BTN11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launchString"/>

                <TextView
                    android:id="@+id/TV11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>